Atualizando as nojeiras que fiz antes
melhorando as class

--- a/index.html
+++ b/index.html
@@ -8,32 +8,32 @@
 </head>
 <body>
     <header> <!-- Header - Cabeçalho -->
-        <div class="container-cabecalho limitar-secao">
-            <div class="cabecalho-logo">           
+        <div class="container_cabecalho wrapper">
+            <div class="cabecalho_logo">           
                 <img src="assets/Logo.png" alt="Ícone Logo">                
             </div>
-            <div class="cabecalho-menu">
-                <nav class="cabecalho-menu-links">
-                    <a href="#" class="cabecalho-link">
+            <div class="cabecalho_menu">
+                <nav class="cabecalho_menu_links">
+                    <a href="#" class="cabecalho_link">
                         Products
                         <img src="assets/Down_Arrow.png" alt="Down_Arrow_Icon">
                     </a>
-                    <a href="#" class="cabecalho-link">
+                    <a href="#" class="cabecalho_link">
                         Solutions
                         <img src="assets/Down_Arrow.png" alt="Down_Arrow_Icon">
                     </a>
-                    <a href="#" class="cabecalho-link">
+                    <a href="#" class="cabecalho_link">
                         Resources
                         <img src="assets/Down_Arrow.png" alt="Down_Arrow_Icon">
                     </a>
-                    <a href="#" class="cabecalho-link">
+                    <a href="#" class="cabecalho_link">
                         Pricing
                         <img src="assets/Down_Arrow.png" alt="Down_Arrow_Icon">
                     </a>                
                 </nav>
-                <div class="cabecalho-menu-botao">
-                    <button class="cabecalho-botao login-botao">Login</button>
-                    <button class="cabecalho-botao try-botao">
+                <div class="cabecalho_menu_botao">
+                    <button class="cabecalho_botao login_botao">Login</button>
+                    <button class="cabecalho_botao try_botao">
                         Try Whitepace free
                         <img src="assets/Right_Arrow_Icon.png" alt="Right_Arrow_Icon">
                     </button>
@@ -43,25 +43,34 @@
     </header>
 
     <main> <!-- Main - Conteúdo Principal -->
-        <section class="section-um-pai">                      
-            <div class="container-section-um limitar-secao">
-                <figure class="section-um-background">
+        <section class="section_header">    
+
+            <div class="container_section_header wrapper">
+
+                <figure class="section_header_background">
                     <img src="assets/lines-background-section-um.png" alt="Background elemento">
                 </figure>
-                <div class="section-um-conteudo">
-                    <div class="section-um-text-box">
+
+                <div class="section_header_contents">
+
+                    <div class="section_header_texto">
                         <h2>Get More Done with whitepace</h2>
                         <p>Project management software that enables your teams to collaborate, plan, analyze and manage everyday tasks</p>
                     </div>
-                    <button class="cabecalho-botao try-botao">
+
+                    <button class="cabecalho_botao try_botao">
                         Try Whitepace free
                         <img src="assets/Right_Arrow_Icon.png" alt="Right_Arrow_Icon">
                     </button>
+
                 </div>
-                <figure class="image-section-um">
+
+                <figure class="image_section_header">
                     <img src="assets/image-section-um.png" alt="Imagem_Section_Um">
                 </figure>
+
             </div>
+
         </section>
     </main>
 
