Melhorias no CSS

--- a/index.html
+++ b/index.html
@@ -7,43 +7,26 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <header> <!-- Header - Cabeçalho -->
-        <div class="container_cabecalho wrapper">
-            <div class="cabecalho_logo">           
-                <img src="assets/Logo.png" alt="Ícone Logo">                
-            </div>
-            <div class="cabecalho_menu">
-                <nav class="cabecalho_menu_links">
-                    <a href="#" class="cabecalho_link">
-                        Products
-                        <img src="assets/Down_Arrow.png" alt="Down_Arrow_Icon">
-                    </a>
-                    <a href="#" class="cabecalho_link">
-                        Solutions
-                        <img src="assets/Down_Arrow.png" alt="Down_Arrow_Icon">
-                    </a>
-                    <a href="#" class="cabecalho_link">
-                        Resources
-                        <img src="assets/Down_Arrow.png" alt="Down_Arrow_Icon">
-                    </a>
-                    <a href="#" class="cabecalho_link">
-                        Pricing
-                        <img src="assets/Down_Arrow.png" alt="Down_Arrow_Icon">
-                    </a>                
+    <header class="header"> <!-- Header - Cabeçalho -->
+        <div class="container wrapper">       
+            <img src="assets/Logo.png" alt="Ícone Logo"> 
+            <div class="menu">
+                <nav class="links">
+                    <a href="#" class="link">Products</a>
+                    <a href="#" class="link">Solutions</a>
+                    <a href="#" class="link">Resources</a>
+                    <a href="#" class="link">Pricing</a>                
                 </nav>
-                <div class="cabecalho_menu_botao">
-                    <button class="cabecalho_botao login_botao">Login</button>
-                    <button class="cabecalho_botao try_botao">
-                        Try Whitepace free
-                        <img src="assets/Right_Arrow_Icon.png" alt="Right_Arrow_Icon">
-                    </button>
+                <div class="buttons">
+                    <button class="button" data-type="login">Login</button>
+                    <button class="button" data-type="try">Try Whitepace free</button>
                 </div>
             </div>
         </div>       
     </header>
 
     <main> <!-- Main - Conteúdo Principal -->
-        <section class="section_header">    
+        <!-- <section class="section_header">    
 
             <div class="container_section_header wrapper">
 
@@ -71,7 +54,7 @@
 
             </div>
 
-        </section>
+        </section> -->
     </main>
 
     <footer> <!-- Footer - Rodapé --></footer>
