Melhorando o HTML e o CSS
reduzindo linhas e melhorando a distribuição dos itens.

--- a/index.html
+++ b/index.html
@@ -12,10 +12,20 @@
             <img src="assets/Logo.png" alt="Ícone Logo"> 
             <div class="menu">
                 <nav class="links">
-                    <a href="#" class="link">Products</a>
-                    <a href="#" class="link">Solutions</a>
-                    <a href="#" class="link">Resources</a>
-                    <a href="#" class="link">Pricing</a>                
+                    <ul>
+                        <li>
+                            <a href="#" class="link">Products</a>
+                        </li>
+                        <li>
+                            <a href="#" class="link">Solutions</a>
+                        </li>
+                        <li>
+                            <a href="#" class="link">Resources</a>
+                        </li>
+                        <li>
+                            <a href="#" class="link">Pricing</a>
+                        </li>
+                    </ul>                               
                 </nav>
                 <div class="buttons">
                     <button class="button" data-type="login">Login</button>
@@ -25,36 +35,17 @@
         </div>       
     </header>
 
-    <main> <!-- Main - Conteúdo Principal -->
-        <!-- <section class="section_header">    
-
-            <div class="container_section_header wrapper">
-
-                <figure class="section_header_background">
-                    <img src="assets/lines-background-section-um.png" alt="Background elemento">
-                </figure>
-
-                <div class="section_header_contents">
-
-                    <div class="section_header_texto">
-                        <h2>Get More Done with whitepace</h2>
-                        <p>Project management software that enables your teams to collaborate, plan, analyze and manage everyday tasks</p>
-                    </div>
-
-                    <button class="cabecalho_botao try_botao">
-                        Try Whitepace free
-                        <img src="assets/Right_Arrow_Icon.png" alt="Right_Arrow_Icon">
-                    </button>
-
+    <main class="main"> <!-- Main - Conteúdo Principal -->
+        <section class="hero_section">
+            <div class="container wrapper">
+                <div class="heading">
+                    <h1>Get More Done with whitepace</h1>
+                    <p>Project management software that enables your teams to collaborate, plan, analyze and manage everyday tasks</p>
+                    <button class="button" data-type="try">Try Whitepace free</button>
                 </div>
-
-                <figure class="image_section_header">
-                    <img src="assets/image-section-um.png" alt="Imagem_Section_Um">
-                </figure>
-
+                <img src="assets/image-section-um.png" alt="bloco cinza">
             </div>
-
-        </section> -->
+        </section>
     </main>
 
     <footer> <!-- Footer - Rodapé --></footer>
