Inserindo novas Sections
Melhoria na estrutura do CSS

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </header>
 
     <main class="main"> <!-- Main - Conteúdo Principal -->
-        <section class="hero_section">
+        <section class="hero_section"> <!-- Section 1 -->
             <div class="container wrapper">
                 <div class="heading">
                     <h1>Get More Done with whitepace</h1>
@@ -46,6 +46,170 @@
                 <img src="assets/image-section-um.png" alt="bloco cinza">
             </div>
         </section>
+
+        <section class="work_section"> <!-- Section 2 -->
+            <div class="container wrapper">
+                <div class="content_um">
+                    <div class="headline">
+                        <h2>Project Management</h2>
+                        <p>Images, videos, PDFs and audio files are supported. Create math expressions and diagrams directly from the app. Take photos with the mobile app and save them to a note.</p>
+                        <button class="button" data-type="try">Get Started</button>
+                    </div>
+                    <img src="assets/image-section-dois-content-um.png" alt="bloco cinza">
+                </div>
+                <div class="content_dois">
+                    <img src="assets/image-section-dois-content-dois.png" alt="bloco cinza">
+                    <div class="headline">
+                        <h2>Work together</h2>
+                        <p>With whitepace, share your notes with your colleagues and collaborate on them. You can also publish a note to the internet and share the URL with others.</p>
+                        <button class="button" data-type="try">Try it now</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="extension_section"> <!-- Section 3 -->
+            <div class="container wrapper">
+                <div class="headline">
+                    <h2>Use as Extension</h2>
+                    <p>Use the web clipper extension, available on Chrome and Firefox, to save web pages or take screenshots as notes.</p>
+                    <button class="button" data-type="try">Let's Go</button>
+                </div>
+                <img src="assets/image-section-tres.png" alt="bloco cinza">
+            </div>
+        </section>
+
+        <section class="needs_section"> <!-- Section 4 -->
+            <div class="container wrapper">
+                <img src="assets/image-section-quatro.png" alt="bloco cinza">
+                <div class="headline">
+                    <h2>Customise it to your needs</h2>
+                    <p>Customise the app with plugins, custom themes and multiple text editors (Rich Text or Markdown). Or create your own scripts and plugins using the Extension API.</p>
+                    <button class="button" data-type="try">Let's Go</button>
+                </div>
+            </div>
+        </section>
+
+        <section class="pricing_section"> <!-- Section 5 -->
+            <div class="container wrapper">
+
+                <div class="heading">
+                    <h2>Choose Your Plan</h2>
+                    <p>Whether you want to get organized, keep your personal life on track, or boost workplace productivity, Evernote has the right plan for you.</p>
+                </div>
+
+                <div class="price_list">
+
+                    <div class="price_board"> <!-- Tabela 1 -->
+
+                        <div class="heading">
+                            <p>Free</p>
+                            <p>$0</p>
+                            <p>Capture ideas and find them quickly</p>
+                        </div>
+
+                        <div class="tables">
+                            <ul>
+                                <li>
+                                    <p>Sync unlimited devices</p>
+                                </li>
+                                <li>
+                                    <p>10 GB monthly uploads</p>
+                                </li>
+                                <li>
+                                    <p>200 MB max. note size</p>
+                                </li>
+                                <li>
+                                    <p>Customize Home dashboard and access extra widgets</p>
+                                </li>
+                                <li>
+                                    <p>Connect primary Google Calendar account</p>
+                                </li>
+                                <li>
+                                    <p>Add due dates, reminders, and notifications to your tasks</p>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <button class="button" data-type="Started-y">Get Started</button>
+
+                    </div>
+
+                    <div class="tabela-2-especial"> <!-- Tabela 2 especial -->
+                        
+                        <div class="heading">
+                            <p>Free</p>
+                            <p>$0</p>
+                            <p>Capture ideas and find them quickly</p>
+                        </div>
+
+                        <div class="tables">    
+                            <ul>
+                                <li>
+                                    <p>Sync unlimited devices</p>
+                                </li>
+                                <li>
+                                    <p>10 GB monthly uploads</p>
+                                </li>
+                                <li>
+                                    <p>200 MB max. note size</p>
+                                </li>
+                                <li>
+                                    <p>Customize Home dashboard and access extra widgets</p>
+                                </li>
+                                <li>
+                                    <p>Connect primary Google Calendar account</p>
+                                </li>
+                                <li>
+                                    <p>Add due dates, reminders, and notifications to your tasks</p>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <button class="button" data-type="Started-b">Get Started</button>
+
+                    </div> 
+
+                    <div class="price_board"> <!-- Tabela 3 -->
+
+                         <div class="heading">
+                            <p>Free</p>
+                            <p>$0</p>
+                            <p>Capture ideas and find them quickly</p>
+                        </div>
+
+                        <div class="tables">
+                            <ul>
+                                <li>
+                                    <p>Sync unlimited devices</p>
+                                </li>
+                                <li>
+                                    <p>10 GB monthly uploads</p>
+                                </li>
+                                <li>
+                                    <p>200 MB max. note size</p>
+                                </li>
+                                <li>
+                                    <p>Customize Home dashboard and access extra widgets</p>
+                                </li>
+                                <li>
+                                    <p>Connect primary Google Calendar account</p>
+                                </li>
+                                <li>
+                                    <p>Add due dates, reminders, and notifications to your tasks</p>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <button class="button" data-type="Started-y">Get Started</button>
+
+                    </div> 
+
+                </div>
+
+            </div>
+        </section>
+
     </main>
 
     <footer> <!-- Footer - Rodapé --></footer>
