--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
         </section>
 
-        <section class="pricing_section"> <!-- Section 5 -->
+        <section class="tables_section"> <!-- Section 5 -->
             <div class="container wrapper">
 
                 <div class="heading">
@@ -98,36 +98,24 @@
                     <p>Whether you want to get organized, keep your personal life on track, or boost workplace productivity, Evernote has the right plan for you.</p>
                 </div>
 
-                <div class="price_list">
+                <div class="tables">
 
-                    <div class="price_board"> <!-- Tabela 1 -->
+                    <div class="table_yellow">
 
-                        <div class="heading">
+                        <div class="head">
                             <p>Free</p>
                             <p>$0</p>
                             <p>Capture ideas and find them quickly</p>
                         </div>
 
-                        <div class="tables">
+                        <div class="list_table">
                             <ul>
-                                <li>
-                                    <p>Sync unlimited devices</p>
-                                </li>
-                                <li>
-                                    <p>10 GB monthly uploads</p>
-                                </li>
-                                <li>
-                                    <p>200 MB max. note size</p>
-                                </li>
-                                <li>
-                                    <p>Customize Home dashboard and access extra widgets</p>
-                                </li>
-                                <li>
-                                    <p>Connect primary Google Calendar account</p>
-                                </li>
-                                <li>
-                                    <p>Add due dates, reminders, and notifications to your tasks</p>
-                                </li>
+                                <li class="text"></li>
+                                <li class="text"></li>
+                                <li class="text"></li>
+                                <li class="text"></li>
+                                <li class="text"></li>
+                                <li class="text"></li>
                             </ul>
                         </div>
 
@@ -135,78 +123,18 @@
 
                     </div>
 
-                    <div class="tabela-2-especial"> <!-- Tabela 2 especial -->
-                        
-                        <div class="heading">
-                            <p>Free</p>
-                            <p>$0</p>
-                            <p>Capture ideas and find them quickly</p>
-                        </div>
+                    <div></div>
 
-                        <div class="tables">    
-                            <ul>
-                                <li>
-                                    <p>Sync unlimited devices</p>
-                                </li>
-                                <li>
-                                    <p>10 GB monthly uploads</p>
-                                </li>
-                                <li>
-                                    <p>200 MB max. note size</p>
-                                </li>
-                                <li>
-                                    <p>Customize Home dashboard and access extra widgets</p>
-                                </li>
-                                <li>
-                                    <p>Connect primary Google Calendar account</p>
-                                </li>
-                                <li>
-                                    <p>Add due dates, reminders, and notifications to your tasks</p>
-                                </li>
-                            </ul>
-                        </div>
+                    <!-- <div class="table_yellow">
+                        <div class="head"></div>
 
-                        <button class="button" data-type="Started-b">Get Started</button>
+                        <div class="list_table"></div>
 
-                    </div> 
-
-                    <div class="price_board"> <!-- Tabela 3 -->
-
-                         <div class="heading">
-                            <p>Free</p>
-                            <p>$0</p>
-                            <p>Capture ideas and find them quickly</p>
-                        </div>
-
-                        <div class="tables">
-                            <ul>
-                                <li>
-                                    <p>Sync unlimited devices</p>
-                                </li>
-                                <li>
-                                    <p>10 GB monthly uploads</p>
-                                </li>
-                                <li>
-                                    <p>200 MB max. note size</p>
-                                </li>
-                                <li>
-                                    <p>Customize Home dashboard and access extra widgets</p>
-                                </li>
-                                <li>
-                                    <p>Connect primary Google Calendar account</p>
-                                </li>
-                                <li>
-                                    <p>Add due dates, reminders, and notifications to your tasks</p>
-                                </li>
-                            </ul>
-                        </div>
-
-                        <button class="button" data-type="Started-y">Get Started</button>
-
-                    </div> 
+                        <button></button>
+                    </div> -->
 
                 </div>
-
+                
             </div>
         </section>
 
@@ -215,3 +143,31 @@
     <footer> <!-- Footer - Rodapé --></footer>
 </body>
 </html>
+
+
+
+
+
+
+
+
+<!-- <ul>
+                                <li>
+                                    <p>Sync unlimited devices</p>
+                                </li>
+                                <li>
+                                    <p>10 GB monthly uploads</p>
+                                </li>
+                                <li>
+                                    <p>200 MB max. note size</p>
+                                </li>
+                                <li>
+                                    <p>Customize Home dashboard and access extra widgets</p>
+                                </li>
+                                <li>
+                                    <p>Connect primary Google Calendar account</p>
+                                </li>
+                                <li>
+                                    <p>Add due dates, reminders, and notifications to your tasks</p>
+                                </li>
+                            </ul> -->
