Corrigindo Section 5 - Tables
Refeito toda a section 5 (html e css) e feito a section 6 (falta alguns detalhes).

--- a/index.html
+++ b/index.html
@@ -92,49 +92,76 @@
 
         <section class="tables_section"> <!-- Section 5 -->
             <div class="container wrapper">
-
                 <div class="heading">
                     <h2>Choose Your Plan</h2>
                     <p>Whether you want to get organized, keep your personal life on track, or boost workplace productivity, Evernote has the right plan for you.</p>
                 </div>
-
                 <div class="tables">
-
-                    <div class="table_yellow">
-
+                    <div class="table_yellow"> <!-- Tabela 1 -->
                         <div class="head">
-                            <p>Free</p>
-                            <p>$0</p>
+                            <h3>Free</h3>
+                            <strong>$0</strong>
                             <p>Capture ideas and find them quickly</p>
                         </div>
-
                         <div class="list_table">
                             <ul>
-                                <li class="text"></li>
-                                <li class="text"></li>
-                                <li class="text"></li>
-                                <li class="text"></li>
-                                <li class="text"></li>
-                                <li class="text"></li>
+                                <li><p class="text">Sync unlimited devices</p></li>
+                                <li><p class="text">10 GB monthly uploads</p></li>
+                                <li><p class="text">200 MB max. note size</p></li>
+                                <li><p class="text">Customize Home dashboard and access extra widgets</p></li>
+                                <li><p class="text">Connect primary Google Calendar account</p></li>
+                                <li><p class="text">Add due dates, reminders, and notifications to your tasks</p></li>
                             </ul>
                         </div>
-
                         <button class="button" data-type="Started-y">Get Started</button>
-
                     </div>
-
-                    <div></div>
-
-                    <!-- <div class="table_yellow">
-                        <div class="head"></div>
-
-                        <div class="list_table"></div>
-
-                        <button></button>
-                    </div> -->
-
+                    <div class="table_blue"> <!-- Tabela 2 -->
+                        <div class="head">
+                            <h3>Personal</h3>
+                            <strong>$11.99</strong>
+                            <p>Keep home and family on track</p>
+                        </div>
+                        <div class="list_table">
+                            <ul>
+                                <li><p class="text">Sync unlimited devices</p></li>
+                                <li><p class="text">10 GB monthly uploads</p></li>
+                                <li><p class="text">200 MB max. note size</p></li>
+                                <li><p class="text">Customize Home dashboard and access extra widgets</p></li>
+                                <li><p class="text">Connect primary Google Calendar account</p></li>
+                                <li><p class="text">Add due dates, reminders, and notifications to your tasks</p></li>
+                            </ul>
+                        </div>
+                        <button class="button" data-type="Started-b">Get Started</button>
+                    </div>
+                    <div class="table_yellow"> <!-- Tabela 3 -->
+                        <div class="head">
+                            <h3>Organization</h3>
+                            <strong>$49.99</strong>
+                            <p>Capture ideas and find them quickly</p>
+                        </div>
+                        <div class="list_table">
+                            <ul>
+                                <li><p class="text">Sync unlimited devices</p></li>
+                                <li><p class="text">10 GB monthly uploads</p></li>
+                                <li><p class="text">200 MB max. note size</p></li>
+                                <li><p class="text">Customize Home dashboard and access extra widgets</p></li>
+                                <li><p class="text">Connect primary Google Calendar account</p></li>
+                                <li><p class="text">Add due dates, reminders, and notifications to your tasks</p></li>
+                            </ul>
+                        </div>
+                        <button class="button" data-type="Started-y">Get Started</button>
+                    </div>
                 </div>
-                
+            </div>
+        </section>
+
+        <section class="plataforma_section"> <!-- Section 6 -->
+            <div class="container wrapper">
+                <div class="headline">
+                    <h3>Your work, everywhere you are</h3>
+                    <p>Access your notes from your computer, phone or tablet by synchronising with various services, including whitepace, Dropbox and OneDrive. The app is available on Windows, macOS, Linux, Android and iOS. A terminal app is also available!</p>
+                    <button class="button" data-type="try">Try Taskey</button>
+                </div>
             </div>
         </section>
 
