--- a/index.html
+++ b/index.html
@@ -203,6 +203,42 @@
             </div>
         </section>
 
+        <section class="notes_section"> <!-- Section 7 -->
+            <div class="container wrapper">
+                <div class="headline">
+                    <h3>100% your data</h3>
+                    <p>The app is open source and your notes are saved to an open format, so you'll always have access to them. Uses End-To-End Encryption (E2EE) to secure your notes and ensure no-one but yourself can access them.</p>
+                    <button class="button" data-type="try">Read more</button>
+                </div>
+                <img src="assets/elements-section-sete.png" alt="elements">
+            </div>
+        </section>
+
+        <section class="sponsors_section"> <!-- Section 8 -->
+            <div class="container wrapper">
+                <div class="heading">
+                    <h3>Our sponsors</h3>
+                    <div>
+                        <img src="assets/sponsors/Apple.png" alt="Apple Icon">
+                        <img src="assets/sponsors/Microsoft.png" alt="Microsoft Icon">
+                        <img src="assets/sponsors/Slack.png" alt="Slack Icon">
+                        <img src="assets/sponsors/Google.png" alt="Google Icon">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="apps_section"> <!-- Section 9 -->
+            <div class="container wrapper">
+                <img src="assets/apps-section-nove.png" alt="apps icons">
+                <div class="headline">
+                    <h3>Work with Your Favorite Apps Using whitepace</h3>
+                    <p>Whitepace teams up with your favorite software. Integrate with over 1000+ apps with Zapier to have all the tools you need for your project success.</p>
+                    <button class="button" data-type="try">Read more</button>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer> <!-- Footer - Rodapé --></footer>
