Inserindo sections novas

--- a/index.html
+++ b/index.html
@@ -239,6 +239,73 @@
             </div>
         </section>
 
+        <section class="cards_clients"> <!-- Section 10 -->
+            <div class="container wrapper">
+                <div class="headline">
+                    <h3>What Our Clients Says</h3>
+                </div>
+                <div class="card">
+                    <div class="client-w" data-type="primeiro">
+                        <div class="comment">
+                            <img src="assets/aspas_azul.png" alt="aspas azul">
+                            <p>Whitepate is designed as a collaboration tool for businesses that is a full project management solution.</p>
+                        </div>
+                        <hr>
+                        <div class="name">
+                            <img src="assets/fotos_cards/Avater_um.png" alt="icon avatar">
+                            <div>
+                                <h4>Oberon Shaw, MCH</h4>
+                                <p>Head of Talent Acquisition, North America</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="client" data-type="segundo">
+                        <div class="comment">
+                            <img src="assets/aspas_branca.png" alt="aspas branca">
+                            <p>Whitepate is designed as a collaboration tool for businesses that is a full project management solution.</p>
+                        </div>
+                        <hr>
+                        <div class="name">
+                            <img src="assets/fotos_cards/Avater_dois.png" alt="icon avatar">
+                            <div>
+                                <h4>Oberon Shaw, MCH</h4>
+                                <p>Head of Talent Acquisition, North America</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="client" data-type="terceiro">
+                        <div class="comment">
+                            <img src="assets/aspas_branca.png" alt="aspas branca">
+                            <p>Whitepate is designed as a collaboration tool for businesses that is a full project management solution.</p>
+                        </div>
+                        <hr>
+                        <div class="name">
+                            <img src="assets/fotos_cards/Avater_tres.png" alt="icon avatar">
+                            <div>
+                                <h4>Oberon Shaw, MCH</h4>
+                                <p>Head of Talent Acquisition, North America</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="slider">
+                    <img src="assets/Slider.png" alt="slider">
+                </div>
+            </div>
+        </section>
+
+        <section class="trial_section"> <!-- Section 11 -->
+            <div class="container wrapper">
+                <div class="heading">
+                    <h3></h3>
+                    <p></p>
+                    <button></button>
+                    <p></p>
+                    <figure></figure>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer> <!-- Footer - Rodapé --></footer>
